MavenWebApplication.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-deployment
  namespace: production
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      application: webpage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  template:
    metadata:
      name: webpage-pod
      labels:
        application: webpage
    spec:
      containers:
      - name: webpage-container
        image: mithuntechnologies/maven-web-application:11
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webpage-service
  namespace: production
spec:
  type: NodePort
  selector:
    application: webpage
  ports:
  - port: 80
    targetPort: 8080
